// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Web3Wrapper 1`] = `
Array [
  Array [
    null,
    "provider",
    "",
    false,
  ],
]
`;

exports[`checkRound, endRound 1`] = `
Array [
  Array [
    "0xpublicKey",
  ],
]
`;

exports[`checkRound, just started, startRound 1`] = `
Array [
  Array [
    "0xpublicKey",
  ],
]
`;

exports[`checkRound, skiped round 1`] = `" option contract has skipped one period!"`;

exports[`checkRound, startRound, priceFetchCoolDown = 0 1`] = `
Array [
  Array [
    "0xpublicKey",
  ],
]
`;

exports[`checkRound, startRound, priceFetchCoolDown > 0 1`] = `
Array [
  Array [
    "0xpublicKey",
  ],
]
`;

exports[`commitPrice 1`] = `30000`;

exports[`commitPrice 2`] = `
Array [
  Array [
    "0xpublicKey",
    Object {
      "contract": "MagiWrapper",
    },
    "quote|base",
  ],
]
`;

exports[`createDuoWrappers 1`] = `
Object {
  "Beethoven": Object {
    "M19": Object {
      "contract": "dualClassWrapper",
    },
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
  "Mozart": Object {
    "M19": Object {
      "contract": "dualClassWrapper",
    },
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
  "Vivaldi": Object {
    "100C-3H": Object {
      "contract": "VivaldiWrapper",
    },
  },
}
`;

exports[`createDuoWrappers 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0x13016f27945f3f7b39A5Daae068D698e34E55491",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
  ],
]
`;

exports[`createEsplanadeWrapper 1`] = `
Object {
  "contract": "EsplanadeWrapper",
}
`;

exports[`createEsplanadeWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
  ],
]
`;

exports[`createMagiWrapper 1`] = `
Object {
  "contract": "MagiWrapper",
}
`;

exports[`createMagiWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0x5734Fe05187857066Ed00d963D4bBBeB619797f4",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
      "web3": Object {
        "eth": Object {
          "accounts": Object {
            "privateKeyToAccount": [MockFunction],
          },
        },
      },
    },
    "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
  ],
]
`;

exports[`fetchEvent 1`] = `
Array [
  Array [
    Array [
      "BTV-PPT",
      "BTV-M19",
      "MZT-PPT",
      "MZT-M19",
      Object {
        "contract": "MagiWrapper",
      },
      Object {
        "contract": "EsplanadeWrapper",
      },
      "VVD-tenor",
    ],
    false,
  ],
]
`;

exports[`fetchKey 1`] = `
Array [
  Array [
    "tool",
    Object {
      "contractType": "type",
      "event": "event",
      "force": false,
      "gasPrice": 1000000000,
      "live": false,
      "pair": "quote|base",
      "provider": "provider",
      "tenor": "tenor",
    },
  ],
]
`;

exports[`fetchKey 2`] = `"0xprivateKey"`;

exports[`fetchKey 3`] = `"0xpublicKey"`;

exports[`fetchKey, key not start with 0x 1`] = `
Array [
  Array [
    "tool",
    Object {
      "contractType": "type",
      "event": "event",
      "force": false,
      "gasPrice": 1000000000,
      "live": false,
      "pair": "quote|base",
      "provider": "provider",
      "tenor": "tenor",
    },
  ],
]
`;

exports[`fetchKey, key not start with 0x 2`] = `"privateKey"`;

exports[`fetchKey, key not start with 0x 3`] = `"0xpublicKey"`;

exports[`fetchPrice 1`] = `30000`;

exports[`fetchPrice 2`] = `
Array [
  Array [
    "0xpublicKey",
    Array [
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
    ],
    Object {
      "contract": "MagiWrapper",
    },
  ],
]
`;

exports[`round 1`] = `
Array [
  Array [
    "100C-3H-Wrapper",
    "magiWrapper",
  ],
]
`;

exports[`round 2`] = `
Array [
  Array [
    [Function],
    30000,
  ],
]
`;

exports[`startCustodian, dualClass 1`] = `
Array [
  Array [
    "account",
    "0x59E6B3d43F762310626d2905148939973db2BBd3",
    "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
    "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
  ],
]
`;

exports[`startCustodian, vivaldi 1`] = `
Array [
  Array [
    "account",
    "0x2C4bD22588af822a95Fb9D7e972A1F1C4aE28F13",
    "0x9f49bb024EB176d227d4b85A58730a5dDeEF529D",
    "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
    1,
    true,
    true,
  ],
]
`;

exports[`trigger 1`] = `
Array [
  Array [
    "0xpublicKey",
    Array [
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "dualClassWrapper",
      },
      Object {
        "contract": "VivaldiWrapper",
      },
    ],
    "event",
  ],
]
`;
